Add header content

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,8 +1,10 @@
 // UTILITIES
 @import 'utilities/variables';
+@import 'utilities/utilities';
 
 // BASE
 @import 'base/reset';
+@import 'base/typography';
 
 // LAYOUT
 @import 'layout/header';
