--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,15 @@
+.u-margin-top-large {
+  margin-top: 5rem; }
+
+.u-margin-top-small {
+  margin-top: 2rem; }
+
+.u-margin-bottom-large {
+  margin-bottom: 5rem; }
+
+.u-margin-bottom-small {
+  margin-bottom: 2rem; }
+
 * {
   margin: 0;
   padding: 0;
@@ -11,9 +23,33 @@ body {
   width: 100%;
   height: 100%; }
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Lato', sans-serif; }
+
+p, a {
+  font-family: 'Montserrat', sans-serif; }
+
+.heading-primary {
+  color: #fff; }
+  .heading-primary--main {
+    display: block;
+    font-size: 8rem;
+    letter-spacing: 5px; }
+  .heading-primary--sub {
+    display: block;
+    font-size: 4rem;
+    margin-top: 2rem; }
+
 .header {
   height: 80vh;
-  background-color: #22a7f0; }
+  background-color: #22a7f0;
+  position: relative; }
+  .header__content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center; }
 
 .topicOfTheDay-section {
   height: 500px;
