--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -3,10 +3,19 @@
   padding: 0;
   box-sizing: inherit; }
 
+// reset materialize
+.row,
+.row .col {
+  // margin: 0;
+  // padding: 0;
+}
+.row {
+  margin-bottom: 0;
+}
+
 html {
-  font-size: 62.5%; }
+  font-size: 62.5%;}
 
 body {
   box-sizing: border-box;
-  width: 100%;
-  height: 100%; }
+  width: 100%;}
