--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,3 +1,11 @@
+section {
+  width: 100%;
+}
+
+img {
+  display: block;
+}
+
 #topic {
   display: flex;
   flex-direction: column;
@@ -7,51 +15,79 @@
   height: 100%;
 }
 
-#topicTitle {
-  font-size: 30px;
-}
-
 #textBox {
   display: inline-block;
   font-size: 26px;
-  padding: 10px;
+  padding: 0;
+  margin: 0;
 }
 
-.topicOfTheDay-section {
-  width: 100%;
-  background-color: $color-white;
+.TOTD-section {
+  // background-color: $color-white;
+  // background-color: red;
 
-  & .TOTD {
+  &__topic {
+    padding: 8rem 20px !important;
+    text-align: center;
+    vertical-align: middle;
+    width: auto;
+    height: 100%;
+    // background-color: orange;
+  }
 
-    &__topic {
-      display: table;
-      text-align: center;
-      vertical-align: middle;
-      background-color: orange;
-      width: 100%;
-    }
+  &__image {
+    // background-color: green;
+    padding: 0 !important;
+  }
 
-    &__img {
-      background-color: green;
-      width: 100%;
-    }
+  &__img {
+    width: 100%;
+    display: block;
   }
 }
 
 .campaign-section {
-  height: 500px;
-  width: 100%;
-  background-color: $color-blue-light;
+  background-color: $color-gray-light;
+
+  &__image {
+    float: left !important;
+    padding: 0 !important;
+  }
+
+  &__img {
+    width: 100%;
+    display: block;
+  }
+
+  &__content {
+    padding: 8rem 20px !important;
+    float: right !important;
+  }
 }
 
 .voices-section {
-  height: 500px;
-  width: 100%;
-  background-color: $color-red-light;
+  padding: 8rem 0;
 }
 
 .contact-section {
-  height: 500px;
+  padding: 0;
+  background-color: $color-gray-light;
+
+  &__map {
+    height: 400px;
+    overflow: hidden;
+  }
+
+  &__contact {
+    padding: 8rem 20px !important;
+    overflow: hidden;
+
+    & form {
+
+    }
+  }
+}
+
+.map-img {
   width: 100%;
-  background-color: $color-blue-light;
 }
