--- a/sass/utilities/_utilities.scss
+++ b/sass/utilities/_utilities.scss
@@ -1,14 +1,14 @@
 .u-margin-top-large {
-  margin-top: 5rem;
+  margin-top: 5rem !important;
 }
 .u-margin-top-small {
-  margin-top: 2rem;
+  margin-top: 2rem !important;
 }
 
 .u-margin-bottom-large {
-  margin-bottom: 5rem;
+  margin-bottom: 5rem !important;
 }
 
 .u-margin-bottom-small {
-  margin-bottom: 2rem;
+  margin-bottom: 2rem !important;
 }
