--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -88,6 +88,11 @@ img {
   }
 }
 
+.contact-section2 {
+  background-image: url(../assets/img/map.png);
+  background-size: cover;
+}
+
 .map-img {
   width: 100%;
 }
