Add map to contact section

--- a/sass/components/_map.scss
+++ b/sass/components/_map.scss
@@ -1,19 +1,28 @@
 .main-raised {
-  overflow: hidden; }
+  overflow: hidden;
+}
 
 .contactus-2 {
-  height: auto; }
+  height: auto;
+}
 
 .custom-map {
+  // background-color: red;
   position: absolute;
   width: 100%;
-  height: 100%; }
+  height: 100%;
+}
 
 .contactus-2 .contact-div .card-contact {
-  margin-bottom: 50px !important; }
+    margin-bottom: 50px !important;
+
+}
 
 @media (max-width: 991px) {
   .custom-map iframe {
-    display: none; }
+    display: none;
+  }
   .custom-map {
-    background-color: #ddd; } }
+    background-color: #ddd;
+  }
+}
