--- a/assets/css/style.concat.css
+++ b/assets/css/style.concat.css
@@ -51,7 +51,7 @@ a {
     color: #2c75d2;
     text-decoration: none; }
   a.text-info:hover, a.text-info:focus {
-    color: #00a5bb; }
+    color: #109ce9; }
   a .material-icons {
     vertical-align: middle; }
 
@@ -391,7 +391,7 @@ input[type="file"] > input[type="button"]::-moz-focus-inner {
         color: #4183d7; }
   .btn.btn-info,
   .navbar .navbar-nav > li > a.btn.btn-info {
-    box-shadow: 0 2px 2px 0 rgba(0, 188, 212, 0.14), 0 3px 1px -2px rgba(0, 188, 212, 0.2), 0 1px 5px 0 rgba(0, 188, 212, 0.12); }
+    box-shadow: 0 2px 2px 0 rgba(34, 167, 240, 0.14), 0 3px 1px -2px rgba(34, 167, 240, 0.2), 0 1px 5px 0 rgba(34, 167, 240, 0.12); }
     .btn.btn-info, .btn.btn-info:hover, .btn.btn-info:focus, .btn.btn-info:active, .btn.btn-info.active, .btn.btn-info:active:focus, .btn.btn-info:active:hover, .btn.btn-info.active:focus, .btn.btn-info.active:hover,
     .open > .btn.btn-info.dropdown-toggle,
     .open > .btn.btn-info.dropdown-toggle:focus,
@@ -411,13 +411,13 @@ input[type="file"] > input[type="button"]::-moz-focus-inner {
     .navbar .navbar-nav > li > a.btn.btn-info.dropdown-toggle:focus,
     .open >
     .navbar .navbar-nav > li > a.btn.btn-info.dropdown-toggle:hover {
-      background-color: #00bcd4;
+      background-color: #22a7f0;
       color: #FFFFFF; }
     .btn.btn-info:focus, .btn.btn-info:active, .btn.btn-info:hover,
     .navbar .navbar-nav > li > a.btn.btn-info:focus,
     .navbar .navbar-nav > li > a.btn.btn-info:active,
     .navbar .navbar-nav > li > a.btn.btn-info:hover {
-      box-shadow: 0 14px 26px -12px rgba(0, 188, 212, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 188, 212, 0.2); }
+      box-shadow: 0 14px 26px -12px rgba(34, 167, 240, 0.42), 0 4px 23px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(34, 167, 240, 0.2); }
     .btn.btn-info.disabled, .btn.btn-info.disabled:hover, .btn.btn-info.disabled:focus, .btn.btn-info.disabled.focus, .btn.btn-info.disabled:active, .btn.btn-info.disabled.active, .btn.btn-info:disabled, .btn.btn-info:disabled:hover, .btn.btn-info:disabled:focus, .btn.btn-info:disabled.focus, .btn.btn-info:disabled:active, .btn.btn-info:disabled.active, .btn.btn-info[disabled], .btn.btn-info[disabled]:hover, .btn.btn-info[disabled]:focus, .btn.btn-info[disabled].focus, .btn.btn-info[disabled]:active, .btn.btn-info[disabled].active,
     fieldset[disabled] .btn.btn-info,
     fieldset[disabled] .btn.btn-info:hover,
@@ -459,14 +459,14 @@ input[type="file"] > input[type="button"]::-moz-focus-inner {
     .btn.btn-info.btn-simple,
     .navbar .navbar-nav > li > a.btn.btn-info.btn-simple {
       background-color: transparent;
-      color: #00bcd4;
+      color: #22a7f0;
       box-shadow: none; }
       .btn.btn-info.btn-simple:hover, .btn.btn-info.btn-simple:focus, .btn.btn-info.btn-simple:active,
       .navbar .navbar-nav > li > a.btn.btn-info.btn-simple:hover,
       .navbar .navbar-nav > li > a.btn.btn-info.btn-simple:focus,
       .navbar .navbar-nav > li > a.btn.btn-info.btn-simple:active {
         background-color: transparent;
-        color: #00bcd4; }
+        color: #22a7f0; }
   .btn.btn-success,
   .navbar .navbar-nav > li > a.btn.btn-success {
     box-shadow: 0 2px 2px 0 rgba(76, 175, 80, 0.14), 0 3px 1px -2px rgba(76, 175, 80, 0.2), 0 1px 5px 0 rgba(76, 175, 80, 0.12); }
@@ -1690,7 +1690,7 @@ output {
   .label.label-success {
     background-color: #4caf50; }
   .label.label-info {
-    background-color: #00bcd4; }
+    background-color: #22a7f0; }
   .label.label-warning {
     background-color: #ff9800; }
   .label.label-danger {
@@ -1760,7 +1760,7 @@ output {
     .form-group.is-focused .form-control .material-input:after {
       background-color: #4183d7; }
   .form-group.is-focused.form-info .form-control {
-    background-image: linear-gradient(#00bcd4, #00bcd4), linear-gradient(#D2D2D2, #D2D2D2); }
+    background-image: linear-gradient(#22a7f0, #22a7f0), linear-gradient(#D2D2D2, #D2D2D2); }
   .form-group.is-focused.form-success .form-control {
     background-image: linear-gradient(#4caf50, #4caf50), linear-gradient(#D2D2D2, #D2D2D2); }
   .form-group.is-focused.form-warning .form-control {
@@ -1800,10 +1800,10 @@ output {
   .form-group.has-info .form-control {
     box-shadow: none; }
   .form-group.has-info.is-focused .form-control {
-    background-image: linear-gradient(#00bcd4, #00bcd4), linear-gradient(#D2D2D2, #D2D2D2); }
+    background-image: linear-gradient(#22a7f0, #22a7f0), linear-gradient(#D2D2D2, #D2D2D2); }
   .form-group.has-info label.control-label,
   .form-group.has-info .help-block {
-    color: #00bcd4; }
+    color: #22a7f0; }
   .form-group textarea {
     resize: none; }
     .form-group textarea ~ .form-control-highlight {
@@ -2087,9 +2087,9 @@ select.form-control {
 .pagination.pagination-info > .active > span,
 .pagination.pagination-info > .active > span:focus,
 .pagination.pagination-info > .active > span:hover {
-  background-color: #00bcd4;
-  border-color: #00bcd4;
-  box-shadow: 0 4px 5px 0 rgba(0, 188, 212, 0.14), 0 1px 10px 0 rgba(0, 188, 212, 0.12), 0 2px 4px -1px rgba(0, 188, 212, 0.2); }
+  background-color: #22a7f0;
+  border-color: #22a7f0;
+  box-shadow: 0 4px 5px 0 rgba(34, 167, 240, 0.14), 0 1px 10px 0 rgba(34, 167, 240, 0.12), 0 2px 4px -1px rgba(34, 167, 240, 0.2); }
 
 .pagination.pagination-success > .active > a, .pagination.pagination-success > .active > a:focus, .pagination.pagination-success > .active > a:hover,
 .pagination.pagination-success > .active > span,
@@ -2162,8 +2162,8 @@ select.form-control {
   margin-top: 5px; }
 
 .nav-pills.nav-pills-info > li.active > a, .nav-pills.nav-pills-info > li.active > a:focus, .nav-pills.nav-pills-info > li.active > a:hover {
-  background-color: #00bcd4;
-  box-shadow: 0 5px 20px 0px rgba(0, 0, 0, 0.2), 0 13px 24px -11px rgba(0, 188, 212, 0.6); }
+  background-color: #22a7f0;
+  box-shadow: 0 5px 20px 0px rgba(0, 0, 0, 0.2), 0 13px 24px -11px rgba(34, 167, 240, 0.6); }
 
 .nav-pills.nav-pills-success > li.active > a, .nav-pills.nav-pills-success > li.active > a:focus, .nav-pills.nav-pills-success > li.active > a:hover {
   background-color: #4caf50;
@@ -2402,9 +2402,9 @@ select.form-control {
         .navbar.navbar-success .dropdown-menu .active > a:hover, .navbar.navbar-success .dropdown-menu .active > a:focus {
           color: #ffffff; }
   .navbar.navbar-info {
-    background-color: #00bcd4;
+    background-color: #22a7f0;
     color: #ffffff;
-    box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 12px -5px rgba(0, 188, 212, 0.46); }
+    box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 12px -5px rgba(34, 167, 240, 0.46); }
     .navbar.navbar-info .navbar-form .form-group input.form-control::-moz-placeholder,
     .navbar.navbar-info .navbar-form input.form-control::-moz-placeholder {
       color: #ffffff; }
@@ -2418,10 +2418,10 @@ select.form-control {
       border-radius: 3px !important; }
       .navbar.navbar-info .dropdown-menu li > a:hover, .navbar.navbar-info .dropdown-menu li > a:focus {
         color: #FFFFFF;
-        background-color: #00bcd4;
-        box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 10px -5px rgba(0, 188, 212, 0.4); }
+        background-color: #22a7f0;
+        box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 10px -5px rgba(34, 167, 240, 0.4); }
       .navbar.navbar-info .dropdown-menu .active > a {
-        background-color: #00bcd4;
+        background-color: #22a7f0;
         color: #ffffff; }
         .navbar.navbar-info .dropdown-menu .active > a:hover, .navbar.navbar-info .dropdown-menu .active > a:focus {
           color: #ffffff; }
@@ -2656,7 +2656,7 @@ select.form-control {
     .alert.alert-success a, .alert.alert-success .alert-link {
       color: #ffffff; }
   .alert.alert-info {
-    background-color: #00cae3;
+    background-color: #30adf1;
     color: #ffffff; }
     .alert.alert-info a, .alert.alert-info .alert-link {
       color: #ffffff; }
@@ -2704,7 +2704,7 @@ select.form-control {
     .progress .progress-bar.progress-bar-success {
       background-color: #4caf50; }
     .progress .progress-bar.progress-bar-info {
-      background-color: #00bcd4; }
+      background-color: #22a7f0; }
     .progress .progress-bar.progress-bar-warning {
       background-color: #ff9800; }
     .progress .progress-bar.progress-bar-danger {
@@ -2714,7 +2714,7 @@ select.form-control {
   .progress.progress-line-primary {
     background: rgba(65, 131, 215, 0.2); }
   .progress.progress-line-info {
-    background: rgba(0, 188, 212, 0.2); }
+    background: rgba(34, 167, 240, 0.2); }
   .progress.progress-line-success {
     background: rgba(76, 175, 80, 0.2); }
   .progress.progress-line-warning {
@@ -2798,7 +2798,7 @@ h2.title {
   color: #4caf50; }
 
 .text-info {
-  color: #00bcd4; }
+  color: #22a7f0; }
 
 .text-rose {
   color: #e91e63; }
@@ -3049,6 +3049,9 @@ h2.title {
   .card .header-rose,
   .card .content-rose {
     background: linear-gradient(60deg, #ec407a, #c2185b); }
+  .card .header-blue,
+  .card .content-blue {
+    background: linear-gradient(to right, #22a7f0, #4183d7); }
   .card .header-primary {
     box-shadow: 0 5px 20px 0px rgba(0, 0, 0, 0.2), 0 13px 24px -11px rgba(65, 131, 215, 0.6); }
   .card .header-danger {
@@ -3058,7 +3061,7 @@ h2.title {
   .card .header-warning {
     box-shadow: 0 5px 20px 0px rgba(0, 0, 0, 0.2), 0 13px 24px -11px rgba(255, 152, 0, 0.6); }
   .card .header-info {
-    box-shadow: 0 5px 20px 0px rgba(0, 0, 0, 0.2), 0 13px 24px -11px rgba(0, 188, 212, 0.6); }
+    box-shadow: 0 5px 20px 0px rgba(0, 0, 0, 0.2), 0 13px 24px -11px rgba(34, 167, 240, 0.6); }
   .card .header-success {
     box-shadow: 0 5px 20px 0px rgba(0, 0, 0, 0.2), 0 13px 24px -11px rgba(76, 175, 80, 0.6); }
   .card [class*="header-"],
@@ -3376,6 +3379,38 @@ h2.title {
     background-color: rgba(0, 0, 0, 0.56);
     border-radius: 6px; }
 
+.card-no-shadow-background {
+  background-position: center center;
+  background-size: cover;
+  text-align: center; }
+  .card-no-shadow-background .card-content {
+    position: relative;
+    z-index: 2;
+    min-height: 280px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    max-width: 440px;
+    margin: 0 auto; }
+  .card-no-shadow-background .category,
+  .card-no-shadow-background .card-description,
+  .card-no-shadow-background small {
+    color: rgba(255, 255, 255, 0.7); }
+  .card-no-shadow-background .card-title {
+    color: #FFFFFF;
+    margin-top: 10px; }
+  .card-no-shadow-background:not(.card-pricing) .btn {
+    margin-bottom: 0; }
+  .card-no-shadow-background:after {
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    display: block;
+    left: 0;
+    top: 0;
+    content: "";
+    border-radius: 6px; }
+
 .back-background .card-content {
   min-height: auto;
   padding-top: 15px;
@@ -3480,6 +3515,7 @@ h2.title {
         left: 0;
         top: 0;
         content: "";
+        background-color: rgba(0, 0, 0, 0.56);
         border-radius: 6px; }
       .rotating-card-container .card .back.back-background .card-content {
         position: relative;
@@ -3744,7 +3780,7 @@ hr.on-light {
   color: #4183d7; }
 
 .icon.icon-info {
-  color: #00bcd4; }
+  color: #22a7f0; }
 
 .icon.icon-success {
   color: #4caf50; }
@@ -4602,12 +4638,12 @@ select[data-dropdownjs][disabled] + .dropdownjs > input[readonly] {
     .bootstrap-tagsinput .tag.tag-primary .tagsinput-add {
       color: #4183d7; }
     .bootstrap-tagsinput .tag.tag-info .tag {
-      background-color: #00bcd4;
+      background-color: #22a7f0;
       color: #FFFFFF; }
       .bootstrap-tagsinput .tag.tag-info .tag .tagsinput-remove-link {
         color: #FFFFFF; }
     .bootstrap-tagsinput .tag.tag-info .tagsinput-add {
-      color: #00bcd4; }
+      color: #22a7f0; }
     .bootstrap-tagsinput .tag.tag-success .tag {
       background-color: #4caf50;
       color: #FFFFFF; }
@@ -5315,6 +5351,9 @@ select[data-dropdownjs][disabled] + .dropdownjs > input[readonly] {
   margin-top: 50px;
   margin-bottom: 50px; }
 
+.pricing-5 .margin-top-small {
+  margin-top: 40px; }
+
 .pricing-3 .title,
 .pricing-4 .title {
   margin-bottom: 10px; }
@@ -5689,9 +5728,9 @@ footer {
   .slider .noUi-handle {
     border-color: #4183d7; }
   .slider.slider-info .noUi-connect {
-    background-color: #00bcd4; }
+    background-color: #22a7f0; }
   .slider.slider-info .noUi-handle {
-    border-color: #00bcd4; }
+    border-color: #22a7f0; }
   .slider.slider-success .noUi-connect {
     background-color: #4caf50; }
   .slider.slider-success .noUi-handle {
@@ -7183,3 +7222,22 @@ select.selectpicker {
   .main.main-raised .container {
     width: 920px; } }
 
+.main-raised {
+  overflow: hidden; }
+
+.contactus-2 {
+  height: auto; }
+
+.custom-map {
+  position: absolute;
+  width: 100%;
+  height: 100%; }
+
+.contactus-2 .contact-div .card-contact {
+  margin-bottom: 50px !important; }
+
+@media (max-width: 991px) {
+  .custom-map iframe {
+    display: none; }
+  .custom-map {
+    background-color: #ddd; } }
