--- a/sass/components/_map.scss
+++ b/sass/components/_map.scss
@@ -6,23 +6,47 @@
   height: auto;
 }
 
-.custom-map {
+.contactus-1 {
+  height: auto;
+  position: relative;
+  padding-top: 0;
+  padding-bottom: 0;
   // background-color: red;
+}
+
+.contactus-1 .info .info-title {
+  // color: #22a7f0;
+  color: #4183d7;
+}
+
+.contactus-1 .info .icon {
+  color: #4183d7;
+}
+
+.custom-map {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 800px;
+}
+
+.contact-div {
+  z-index: 1000;
 }
 
 .contactus-2 .contact-div .card-contact {
     margin-bottom: 50px !important;
-
+    width: 100%;
+    margin-left: 0 !important;
 }
 
 @media (max-width: 991px) {
   .custom-map iframe {
-    display: none;
+    // display: none;
   }
   .custom-map {
     background-color: #ddd;
+    position: relative;
+    height: 500px;
+    // margin-bottom: -70px;
   }
 }
