--- a/sass/components/_map.scss
+++ b/sass/components/_map.scss
@@ -11,11 +11,9 @@
   position: relative;
   padding-top: 0;
   padding-bottom: 0;
-  // background-color: red;
 }
 
 .contactus-1 .info .info-title {
-  // color: #22a7f0;
   color: #4183d7;
 }
 
@@ -26,7 +24,7 @@
 .custom-map {
   position: absolute;
   width: 100%;
-  height: 800px;
+  height: 840px;
 }
 
 .contact-div {
@@ -47,6 +45,20 @@
     background-color: #ddd;
     position: relative;
     height: 500px;
-    // margin-bottom: -70px;
   }
+}
+
+// Prevent the contact form from extending past the map
+@media (min-width: 991px) {
+  .tight-col {
+    padding: 0;
+  }
+}
+
+.map-contact-info {
+  font-size: 14px;
+}
+
+.icon-small {
+  font-size: 11px;
 }
