--- a/assets/css/style.comp.css
+++ b/assets/css/style.comp.css
@@ -19,7 +19,7 @@
 .custom-map {
   position: absolute;
   width: 100%;
-  height: 800px; }
+  height: 840px; }
 
 .contact-div {
   z-index: 1000; }
@@ -34,6 +34,16 @@
     background-color: #ddd;
     position: relative;
     height: 500px; } }
+
+@media (min-width: 991px) {
+  .tight-col {
+    padding: 0; } }
+
+.map-contact-info {
+  font-size: 14px; }
+
+.icon-small {
+  font-size: 11px; }
 
 .facebook-embed {
   width: 100%;
