--- a/assets/css/style.concat.css
+++ b/assets/css/style.concat.css
@@ -7243,7 +7243,7 @@ select.selectpicker {
 .custom-map {
   position: absolute;
   width: 100%;
-  height: 800px; }
+  height: 840px; }
 
 .contact-div {
   z-index: 1000; }
@@ -7258,6 +7258,16 @@ select.selectpicker {
     background-color: #ddd;
     position: relative;
     height: 500px; } }
+
+@media (min-width: 991px) {
+  .tight-col {
+    padding: 0; } }
+
+.map-contact-info {
+  font-size: 14px; }
+
+.icon-small {
+  font-size: 11px; }
 
 .facebook-embed {
   width: 100%;
