--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,7 +4,7 @@
 
 // UTILITIES
 // @import 'utilities/variables';
-// @import 'utilities/utilities';
+@import 'utilities/utilities';
 
 // LAYOUT
 // @import 'layout/header';
