--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -6,6 +6,10 @@ img {
   display: block;
 }
 
+#call-now-btn-box {
+  margin-left: 40px;
+}
+
 .campaign-section {
   background-color: $color-gray-light;
 
