Add call-now-btn-blue to top

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -6,8 +6,12 @@ img {
   display: block;
 }
 
-#call-now-btn-box {
-  margin-left: 40px;
+.call-now-btn-box {
+  
+}
+
+.call-now-btn {
+
 }
 
 .campaign-section {
