--- a/assets/css/main1.css
+++ b/assets/css/main1.css
@@ -64,7 +64,7 @@ a {
   transform: rotate(180deg); }
 
 /*           Animations              */
-.animation-transition-general, .carousel .carousel-indicators li {
+.animation-transition-general {
   -webkit-transition: all 300ms linear;
   -moz-transition: all 300ms linear;
   -o-transition: all 300ms linear;
@@ -77,6 +77,13 @@ a {
   -o-transition: all 370ms linear;
   -ms-transition: all 370ms linear;
   transition: all 370ms linear; }
+
+.animation-transition-extra-slow, .carousel .carousel-indicators li {
+  -webkit-transition: all 2000ms linear;
+  -moz-transition: all 2000ms linear;
+  -o-transition: all 2000ms linear;
+  -ms-transition: all 2000ms linear;
+  transition: all 2000ms linear; }
 
 .caret {
   -webkit-transition: transform 150ms ease 0s;
