Add back-to-top btn, stop slider

--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -13,6 +13,9 @@
 .u-margin-bottom-small {
   margin-bottom: 2rem !important; }
 
+.u-margin-right-small {
+  margin-right: 2rem !important; }
+
 @media (max-width: 992px) {
   .u-margin-top-small-tablet {
     margin-top: 2rem !important; }
@@ -81,3 +84,24 @@
   @media (min-width: 991px) {
     .facebook-embed {
       height: 400px; } }
+
+#back-to-top-btn {
+  position: fixed;
+  bottom: 20px;
+  right: 40px;
+  z-index: 100000;
+  background-color: rgba(65, 131, 215, 0.8);
+  width: 100px;
+  height: 50px;
+  text-align: center;
+  border: 2px solid white;
+  border-radius: 5px; }
+
+.title-white {
+  color: white; }
+
+.btn-show {
+  display: block; }
+
+.btn-hide {
+  display: none; }
