--- a/sass/utilities/_utilities.scss
+++ b/sass/utilities/_utilities.scss
@@ -16,6 +16,10 @@
   margin-bottom: 2rem !important;
 }
 
+.u-margin-right-small {
+  margin-right: 2rem !important;
+}
+
 @media (max-width: 992px) {
   .u-margin-top-small-tablet {
     margin-top: 2rem !important;
