--- a/assets/css/style.comp.css
+++ b/assets/css/style.comp.css
@@ -28,6 +28,9 @@
   .u-margin-bottom-small-mobile {
     margin-bottom: 2rem !important; } }
 
+.u-remove-padding {
+  padding: 0; }
+
 .main-raised {
   overflow: hidden; }
 
