--- a/sass/components/_map.scss
+++ b/sass/components/_map.scss
@@ -24,7 +24,8 @@
 .custom-map {
   position: absolute;
   width: 100%;
-  height: 840px;
+  // height: 840px;
+  height: 650px;
 }
 
 .contact-div {
