--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -31,6 +31,12 @@
 .u-remove-padding {
   padding: 0; }
 
+.u-float-right {
+  float: right !important; }
+
+.u-float-left {
+  float: left !important; }
+
 .main-raised {
   overflow: hidden; }
 
