--- a/sass/utilities/_utilities.scss
+++ b/sass/utilities/_utilities.scss
@@ -41,3 +41,11 @@
 .u-remove-padding {
   padding: 0;
 }
+
+.u-float-right {
+  float: right !important;
+}
+
+.u-float-left {
+  float: left !important;
+}
