Add lesson schedule, remove pricing tables, add contact form content

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,3 +18,4 @@
 @import 'components/_map';
 @import 'components/_facebook';
 @import 'components/_top-btn';
+@import 'components/_schedule-table';
