--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -114,3 +114,13 @@
 
 .btn-hide {
   display: none; }
+
+.schedule {
+  margin-left: auto;
+  margin-right: auto; }
+  .schedule__content {
+    font-size: 2rem; }
+    .schedule__content td {
+      padding: 5px 20px 5px 0; }
+      .schedule__content td:first-child {
+        font-weight: bold; }
