--- a/assets/css/style.concat.css
+++ b/assets/css/style.concat.css
@@ -7272,6 +7272,12 @@ select.selectpicker {
 .u-remove-padding {
   padding: 0; }
 
+.u-float-right {
+  float: right !important; }
+
+.u-float-left {
+  float: left !important; }
+
 .main-raised {
   overflow: hidden; }
 
@@ -7349,3 +7355,13 @@ select.selectpicker {
 
 .btn-hide {
   display: none; }
+
+.schedule {
+  margin-left: auto;
+  margin-right: auto; }
+  .schedule__content {
+    font-size: 2rem; }
+    .schedule__content td {
+      padding: 5px 20px 5px 0; }
+      .schedule__content td:first-child {
+        font-weight: bold; }
