--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -16,6 +16,9 @@
 .u-margin-right-small {
   margin-right: 2rem !important; }
 
+.u-padding-top-small {
+  padding-top: 2rem !important; }
+
 @media (max-width: 992px) {
   .u-margin-top-small-tablet {
     margin-top: 2rem !important; }
@@ -36,6 +39,11 @@
 
 .u-float-left {
   float: left !important; }
+
+@media (max-width: 375px) {
+  .u-mobile-header-padding {
+    padding-top: 100px !important;
+    padding-bottom: 120px !important; } }
 
 .main-raised {
   overflow: hidden; }
