--- a/assets/css/style.concat.css
+++ b/assets/css/style.concat.css
@@ -7257,6 +7257,9 @@ select.selectpicker {
 .u-margin-right-small {
   margin-right: 2rem !important; }
 
+.u-padding-top-small {
+  padding-top: 2rem !important; }
+
 @media (max-width: 992px) {
   .u-margin-top-small-tablet {
     margin-top: 2rem !important; }
@@ -7277,6 +7280,11 @@ select.selectpicker {
 
 .u-float-left {
   float: left !important; }
+
+@media (max-width: 375px) {
+  .u-mobile-header-padding {
+    padding-top: 100px !important;
+    padding-bottom: 120px !important; } }
 
 .main-raised {
   overflow: hidden; }
